# GuitarHelper

./: CMakeLists.txt  README.md
src/: Chromagram.cpp  Chromagram.h  Fourier.cpp  Fourier.h  Recorder.cpp  Recorder.h  RecorderWindow.cpp  RecorderWindow.h  Window.h  main.cpp
src/display/: BoxPlot.cpp  BoxPlot.h  CMakeLists.txt  Figure.cpp  Figure.h  Text.cpp  Text.h
